# skimmer

./: Cargo.toml  README.md
src/: data.rs  lib.rs  marker.rs  reader.rs  scanner.rs  symbol.rs
src/reader/: bytes_reader.rs  into_reader.rs  ioreadeof_reader.rs  mod.rs  slice_reader.rs  traits.rs
