[package]
name = "skimmer"
version = "0.0.2"
authors = ["dnsl48 <dnsl48@gmail.com>"]

description = "Simple streams reader"
categories = ["parsing"]

license = "MIT/Apache-2.0"

homepage = "https://github.com/dnsl48/skimmer.git"
repository = "https://github.com/dnsl48/skimmer.git"
documentation = "https://docs.rs/skimmer/"
readme = "README.md"